attempt fix for momentum scrolling on IOS devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,8 @@ html,body
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
+    overflow:auto;
+    -webkit-overflow-scrolling: touch;
 }
  h1 {
    padding:0px;
